...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B5M-1n-QdL">
                                                    <rect key="frame" x="12" y="30" width="350" height="143"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="noteLabel"/>
                                                    <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gtd-Os-ZvJ">
                                                    <rect key="frame" x="341.5" y="172" width="20.5" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="editButton"/>
                                                    <color key="tintColor" systemColor="systemGrayColor"/>
                                                    <state key="normal" image="square.and.pencil" catalog="system"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="99I-h4-Bdf">
                                                    <rect key="frame" x="309.5" y="172" width="20" height="22"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="deleteButton"/>
                                                    <color key="tintColor" systemColor="systemGrayColor"/>
                                                    <state key="normal" image="trash" catalog="system"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v0w-Xg-CWy">
                                <rect key="frame" x="290" y="750" width="70" height="70"/>
                                <accessibility key="accessibilityConfiguration" identifier="addNewNoteButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="70" id="N5w-Vw-mYB"/>
...
                                <rect key="frame" x="24" y="210" width="366" height="686"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="newNoteText"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="686" id="HGv-xW-Nz3"/>
...
                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VJF-jI-cHF">
                                        <rect key="frame" x="306" y="17" width="51" height="31"/>
                                        <accessibility key="accessibilityConfiguration" identifier="notificationSwitch"/>
                                        <connections>
                                            <action selector="didTapSwitch:" destination="e2s-tI-yRk" eventType="valueChanged" id="l5G-8u-EJm"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f4L-eL-0Nr">
                                <rect key="frame" x="353" y="73" width="45" height="41"/>
                                <accessibility key="accessibilityConfiguration" identifier="saveNewNote"/>
                                <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="21"/>
                                <state key="normal" title="Save"/>
...
